[build-system]
requires = ["hatchling >=0.25"]
build-backend = "hatchling.build"

[project]
name = "alrecon"
license = {file = "LICENSE"}
authors = [
    { name="Gianluca Iori", email="gianthk.iori@gmail.com" },
]
keywords = [
    "computed tomography",
    "tomographic reconstruction",
    "x-ray imaging",
    "image processing",
    "synchrotron",
    "solara",
    "web application"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "tomopy",
    "pathlib",
    "solara",
    "plotly",
    "dxchange",
    "pyyaml",
    "numpy",
    "tifffile",
    "matplotlib",
]

[project.optional-dependencies]
all = [
    "pandas",
    "astra-toolbox::astra-toolbox",
    "gspread",
    "gspread_dataframe",
    "oauth2client",
    "napari",
]

[tool.hatch.version]
path = "alrecon/__init__.py"

[project.urls]
Home = "https://www.github.com/widgetti/solara"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
